added image and change folder source

--- a/Intro_to_programming/notes.html
+++ b/Intro_to_programming/notes.html
@@ -6,17 +6,17 @@
 <html>
 <head>
   HTML
-  <link rel="icon"
-        sizes="16x16"
-        type="image/png"
-        href="favicon.ico"/>
-  <link rel="stylesheet"
+  <title class ="Title"> HTML
+    <link rel="icon"
+          type="image/png"
+          href="http://i.imgur.com/JN2D2Rn.png"/>
+    </title>
+
+       <link rel="stylesheet"
         type="text/css"
         href="notes.css"/>
 </head>
-<title class ="Title"> HTML
 
-  </title>
   <body>
   <div class = "Title_Def">
     <hr>
