REMOVED HTML from head to fix favicon.

--- a/Intro_to_programming/notes.html
+++ b/Intro_to_programming/notes.html
@@ -5,16 +5,10 @@
     Lesson 1 Notes-->
 <html>
 <head>
-  HTML
-  <title class ="Title"> HTML
-    <link rel="icon"
-          type="image/png"
-          href="http://i.imgur.com/JN2D2Rn.png"/>
-    </title>
+  <title class ="Title"> HTML</title>
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 
-       <link rel="stylesheet"
-        type="text/css"
-        href="notes.css"/>
+    <link rel="stylesheet" type="text/css" href="notes.css"/>
 </head>
 
   <body>
