1. url link up to favicon 2. break ends

--- a/Intro_to_programming/notes.html
+++ b/Intro_to_programming/notes.html
@@ -6,26 +6,26 @@
 <html>
 <head>
   <title class ="Title"> HTML</title>
-    <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="http://i.imgur.com/axSHiyI.png"/>
 
     <link rel="stylesheet" type="text/css" href="notes.css"/>
 </head>
 
   <body>
   <div class = "Title_Def">
-    <hr>
+    <hr />
   HTML stands for Hyper Text Markup Language.
-  <br>
+  <br />
   <a href ="https://developer.mozilla.org/en-US/docs/Web/HTML/Element"
      target="_blank">HTML Elemental Reference Link</a>
-  <br>
+  <br />
   <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Reference"
      target="_blank">
     CSS Reference Link
   </a>
   </div>
     <p>
-      <br>
+      <br />
       Made up of syntax that surround things called
       <em>Tags</em>
     </p>
@@ -33,24 +33,24 @@
 <!--****************************************************-->
   <div class = "Tags">
     <p>
-      <br>
+      <br />
       <b>Tags</b>
-      <br>
-      <br>
+      <br />
+      <br />
       Tags are basically indicators for when the computer
       knowsto start or end any input. This is because the
       compilerneed specific patterns to interpret the
       information given.
     </p>
-      <br>
+      <br />
     </div>
   <p2>
     Some examples include 	&#60;b&#62;, &#60;html&#62;,
     &#60;whatever&#62;
-    <br>
+    <br />
     However, all of these need to have closing tags as well.
     &#60;/b&#62;, &#60;/html&#62;, &#60;/whatever&#62;
-    <br>
+    <br />
   </p2>
 
 
@@ -63,8 +63,8 @@
 
       &#60;a href = "https://source.com"&#62; text
       &#60;/a&#62;
-     <br>
-     <br>
+     <br />
+     <br />
      This allows text to become a clickable link to the
      webaddress
      specified.
@@ -75,15 +75,15 @@
   <div class = "Images">
     <p>
     <b>Images</b>
-    <br>
-    <br>
-     Follow this format if you want to add images.<br>
-     &#60;img src = "source" alt = " text"&#62;<br>
-     <br>
+    <br />
+    <br />
+     Follow this format if you want to add images.<br />
+     &#60;img src = "source" alt = " text"&#62;<br />
+     <br />
      This format shows the image tag with key words
      src and alt.Within the quotes are the source of the
      image and the substitute text if the image doesn't load.
-     <br>
+     <br />
     </p>
   </div>
   <hr>
@@ -92,14 +92,14 @@
   <div = class = "Useful Tags">
     <p>
       <b>Useful tags:</b>
-    <br>
-    <br>
+    <br />
+    <br />
     &#60;br&#62; = break (gives a line of whitespace) -void
-    <br>
+    <br />
     &#60;p&#62; = paragraph(a structuring tag) &#60;/p&#62;
-    <br>
+    <br />
     &#60;div&#62; = 'box' container &#60;/div&#62;
-    <br>
+    <br />
     &#60;span&#62; = inline container element &#60;/span&#62;
     </p>
   </div>
@@ -107,13 +107,13 @@
   <!--****************************************************-->
   <div class ="Inline vs Block">
       <b>Inline vs Block</b>
-      <br>
-      <br>
+      <br />
+      <br />
       <p1>
        Inline elements occupy the space that are within the
        tags.
      </p1>
-      <br>
+      <br />
       <p2>
       Block elements occupy the whole space of it's container.
     </p2>
