<p> changes and class typo

--- a/Intro_to_programming/notes.html
+++ b/Intro_to_programming/notes.html
@@ -44,14 +44,14 @@
     </p>
       <br />
     </div>
-  <p2>
+  <p>
     Some examples include 	&#60;b&#62;, &#60;html&#62;,
     &#60;whatever&#62;
     <br />
     However, all of these need to have closing tags as well.
     &#60;/b&#62;, &#60;/html&#62;, &#60;/whatever&#62;
     <br />
-  </p2>
+  </p>
 
 
 
@@ -89,7 +89,7 @@
   <hr>
 
 <!--****************************************************-->
-  <div = class = "Useful Tags">
+  <div class = "Useful Tags">
     <p>
       <b>Useful tags:</b>
     <br />
@@ -109,14 +109,14 @@
       <b>Inline vs Block</b>
       <br />
       <br />
-      <p1>
+      <p>
        Inline elements occupy the space that are within the
        tags.
-     </p1>
+     </p>
       <br />
-      <p2>
+      <p>
       Block elements occupy the whole space of it's container.
-    </p2>
+    </p>
   </div>
 </body>
 </html>
