finished Lesson 2, moving onto Python3

--- a/Intro_to_programming/MakeaWebPage/home.html
+++ b/Intro_to_programming/MakeaWebPage/home.html
@@ -4,11 +4,35 @@ Author: Kevin Hyun
 Date Created: 20 June 2017
 Project: Udacity course MakeAWebPage
 -->
-<html>
-<head>
-<link rel="stylesheet" href="style.css">
-<title></title>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <link rel ="shortcut icon" type ="image/png" href="http://i.imgur.com/axSHiyI.png"/>
+    <link rel="stylesheet" href="style.css"/>
+    <title>Non-Sense</title>
+  </head>
+<!--*************************************************************************-->
+  <body>
+    <h1 class= "Introduction">
+      Hello Reviewer!
+    </h1>
+<!--*************************************************************************-->
+    <div class = "Explanation">
+      This is going to be a  random webpage made
+      <span class ="highlight">specifically</span>
+      to meet the requirements to the Code Review.
+      <br />
+      It will not make sense and will not try to teach the reviewer anything.
+    </div>
+<hr />
+<!--*************************************************************************-->
+   <div class = "Flex">
+     <img class="Sana_Twice" src="https://s-media-cache-ak0.pinimg.com/originals/8e/00/71/8e00718f6e75f3b866e33a748c88c024.jpg"
+        alt ="Sorry, if you can't see Sana" />
+     <div class ="text_flex">
+        This is Twice's girl group member Sana Minatozaki.
+        <br />
+        Sana is my k-pop bias and favorite from the girl group.
+      </div>
+  </div>
 </body>
 </html>
