Changed class names

--- a/Intro_to_programming/MakeaWebPage/home.html
+++ b/Intro_to_programming/MakeaWebPage/home.html
@@ -12,27 +12,28 @@ Project: Udacity course MakeAWebPage
   </head>
 <!--*************************************************************************-->
   <body>
-    <h1 class= "Introduction">
+    <h1 class= "header">
       Hello Reviewer!
     </h1>
 <!--*************************************************************************-->
-    <div class = "Explanation">
-      This is going to be a  random webpage made
+    <div class ="box">
+      <p class="text"> This is going to be a  random webpage made
       <span class ="highlight">specifically</span>
       to meet the requirements to the Code Review.
       <br />
       It will not make sense and will not try to teach the reviewer anything.
+      </p>
     </div>
 <hr />
 <!--*************************************************************************-->
-   <div class = "Flex">
-     <img class="Sana_Twice" src="https://s-media-cache-ak0.pinimg.com/originals/8e/00/71/8e00718f6e75f3b866e33a748c88c024.jpg"
+   <div class = "box">
+     <img class="image" src="https://s-media-cache-ak0.pinimg.com/originals/8e/00/71/8e00718f6e75f3b866e33a748c88c024.jpg"
         alt ="Sorry, if you can't see Sana" />
-     <div class ="text_flex">
+     <p class ="text">
         This is Twice's girl group member Sana Minatozaki.
         <br />
         Sana is my k-pop bias and favorite from the girl group.
-      </div>
+      </p>
   </div>
 </body>
 </html>
